web/book/tests/snapshots/snapshot__transforms__sort-0.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nsort age\n"
---
SELECT
  *
FROM
  employees
ORDER BY
  age

