web/book/tests/snapshots/snapshot__transforms__sort-5.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nsort tenure\njoin locations [==employee_id]\n"
---
WITH table_1 AS (
  SELECT
    *
  FROM
    employees
)
SELECT
  table_0.*,
  locations.*
FROM
  table_1 AS table_0
  JOIN locations ON table_0.employee_id = locations.employee_id
ORDER BY
  table_0.tenure

