web/book/tests/snapshots/snapshot__transforms__take-1.snap
---
source: web/book/tests/snapshot.rs
expression: "from orders\nsort [-value, created_at]\ntake 101..110\n"
---
SELECT
  *
FROM
  orders
ORDER BY
  value DESC,
  created_at
LIMIT
  10 OFFSET 100

